WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
128381
FloatingObject::unsafeClone should not copy m_originatingLine
https://bugs.webkit.org/show_bug.cgi?id=128381
Summary
FloatingObject::unsafeClone should not copy m_originatingLine
Bem Jones-Bey
Reported
2014-02-07 10:33:16 PST
FloatingObject::unsafeClone should not copy m_originatingLone
Attachments
Patch
(1.64 KB, patch)
2014-02-07 10:35 PST
,
Bem Jones-Bey
no flags
Details
Formatted Diff
Diff
Patch for landing
(1.64 KB, patch)
2014-02-07 14:18 PST
,
Bem Jones-Bey
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Bem Jones-Bey
Comment 1
2014-02-07 10:35:16 PST
Created
attachment 223470
[details]
Patch
Andreas Kling
Comment 2
2014-02-07 11:37:38 PST
Comment on
attachment 223470
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=223470&action=review
> Source/WebCore/ChangeLog:3 > + FloatingObject::unsafeClone should not copy m_originatingLone
m_originatingLine
Bem Jones-Bey
Comment 3
2014-02-07 14:18:03 PST
Created
attachment 223497
[details]
Patch for landing
WebKit Commit Bot
Comment 4
2014-02-07 14:56:25 PST
Comment on
attachment 223497
[details]
Patch for landing Clearing flags on attachment: 223497 Committed
r163651
: <
http://trac.webkit.org/changeset/163651
>
WebKit Commit Bot
Comment 5
2014-02-07 14:56:27 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug