FloatingObject::unsafeClone should not copy m_originatingLine https://bugs.webkit.org/show_bug.cgi?id=128381

Reviewed by Andreas Kling.

Copying the originatingLine allows to break the invariant that the
floating object must only contain lines that are owned by the renderer
it is attached to.

* rendering/FloatingObjects.cpp:
(WebCore::FloatingObject::unsafeClone):


Canonical link: https://commits.webkit.org/146422@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163651 268f45cc-cd09-0410-ab3c-d52691b4dbfc