Source/WebCore/rendering/FloatingObjects.cpp
@@ -93,7 +93,6 @@ std::unique_ptr<FloatingObject> FloatingObject::unsafeClone() const
 {
     // FIXME: Use make_unique here, once we can get it to compile on all platforms we support.
     std::unique_ptr<FloatingObject> cloneObject(new FloatingObject(renderer(), type(), m_frameRect, m_shouldPaint, m_isDescendant));
-    cloneObject->m_originatingLine = m_originatingLine;
     cloneObject->m_paginationStrut = m_paginationStrut;
     cloneObject->m_isPlaced = m_isPlaced;
     return cloneObject;
